# backend

./: AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/app/: auth.py  config.py  dependencies.py  main.py
src/app/models/: __init__.py  event.py  user.py  venue.py
src/app/routers/: auth.py  events.py  feed.py  venues.py
src/app/schemas/: auth.py  event.py  user.py  venue.py
